--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.jar
 *.war
 *.ear
+out
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -25,3 +26,10 @@ fst
 
 # vim
 *.swp
+
+# IDE files
+.idea
+*.iml
+
+# OS files
+.DS_Store
