--- a/java/pom.xml
+++ b/java/pom.xml
@@ -71,6 +71,10 @@
             <artifactId>asm-all</artifactId>
             <version>5.0.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 </project>
