REORG/MINOR: Reorganized packaging

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -19,32 +19,13 @@
                             <appendAssemblyId>false</appendAssemblyId>
                             <archive>
                                 <manifest>
-                                    <mainClass>builder.MastLauncher</mainClass>
+                                    <mainClass>builder.MainLauncher</mainClass>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
                             </descriptorRefs>
-                            <finalName>${project.artifactId}-${project.version}-mast-builder</finalName>
-                        </configuration>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>build-jit-compiler</id>
-                        <configuration>
-                            <appendAssemblyId>false</appendAssemblyId>
-                            <archive>
-                                <manifest>
-                                    <mainClass>generator.BytecodeCompiler</mainClass>
-                                </manifest>
-                            </archive>
-                            <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                            </descriptorRefs>
-                            <finalName>${project.artifactId}-${project.version}-jit-compiler</finalName>
+                            <finalName>${project.artifactId}-${project.version}-main</finalName>
                         </configuration>
                         <phase>package</phase>
                         <goals>
